--- a/Views/Shared/Dashboard_Layout.cshtml
+++ b/Views/Shared/Dashboard_Layout.cshtml
@@ -20,7 +20,7 @@
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
@@ -278,6 +278,7 @@
 }
 </style>
 <body>
+    
 <nav class="navbar">
     <!-- Logo -->
     <a href="#" class="logo">
