--- a/wwwroot/css/homeowners/dashboardhomeowners.css
+++ b/wwwroot/css/homeowners/dashboardhomeowners.css
@@ -963,7 +963,7 @@ h1, h2, h3, h4, h5, h6 {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   overflow-y: auto;
 }
